objects/L2I_Opportunity_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Lead to Invoice project Hierarchical Custom Settings for Opportunity</description>
    <fields>
        <fullName>Enforce_Fulfillment_Parent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enforce Fulfillment Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enforce_No_Parent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enforce No Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enforce_Pipeline_Parent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enforce Sales Parent</label>
        <type>Checkbox</type>
    </fields>
    <label>L2I Opportunity Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>Enforce_Pipeline_Parent__c</columns>
        <columns>Enforce_Fulfillment_Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>